[package]
name = "dagchat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# , package = "ed25519-dalek-blake2-feeless"
[dependencies]
ecies-ed25519 = "0.5.1"
ed25519-dalek = { version = "1.0.1"  , package = "ed25519-dalek-blake2-feeless"}
cursive = { version = "0.17.0", default-features = false, features = ["crossterm-backend"] }
cursive_buffered_backend = "0.6.0"
sha2 = "0.10.1"
blake2 = "0.10.2"
rand = "0.7.0"
data-encoding = "2.3.2"
data-encoding-macro = "0.1.12"
hex = "0.3.1"
num_cpus = "1.13.1"
serde_json = "1.0.74"
serde = { version = "1.0.136", features = ["derive"] }
reqwest = {version = "0.11.10", features = ["blocking"]}
crossterm = "0.23.2"
arboard = "2.1.0"
bigdecimal = "0.3.0"